<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AllPlayers (Beta)</string>
    <string name="groups">Groups</string>
    <string name="messages">Messages</string>
    <string name="contacts">Contacts</string>
    <string name="photos">Photo Albums</string>
    <string name="events">Events</string>
    <string name="logout">Log Out</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="done">Done</string>
    <string name="reply">Reply</string>
    <string name="add_groupmates">Add Groupmates</string>
    <string name="add_friends">Add Friends</string>
    <string name="compose">Compose Message</string>
    <string name="send">Send</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password:</string>
    <string name="verify_pass">Verify Password:</string>
    <string name="username">Username:</string>
    <string name="date">Date</string>
    <string name="search_groups">Search Groups</string>
    <string name="zip">Zipcode:</string>
    <string name="distance">Distance:</string>
    <string name="keywords">Keywords:</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="remove_recip">Remove Recipient</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email Address:</string>
    <string name="gender">Gender:</string>
    <string name="birthdate">Birthdate:</string>
    <string name="register">Register</string>
    <string name="captcha">Please solve this simple math problem:</string>
    <string name="sort">Sort:</string>
    <string name="load_more">Load More</string>
    <string name="account_create_success">Thanks for joining AllPlayers.com! We have sent you an email with instructions on how to verify your account with us.</string>
    <string name="invalid_age">I am sorry, but AllPlayers.com cannot create an account for you at this time. To create an AllPlayers.com account, you must be 13 years of age or older. This is in compliance with our COPPA+ Guardian Watch.</string>
    <string name="invalid_gender">Please select a gender.</string>
    <string name="send_a_message">Send a message</string>
    <string name="friend_request">Request to add as friend</string>
    <string name="search_for_groups">Search for Groups</string>

    <string-array name="sort_method">
        <item>Activity</item>
        <item>Alpha Asc.</item>
        <item>Alpha Desc.</item>
    </string-array>

    <string name="title_activity_create_event">CreateEventActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

</resources>