<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/first_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name" />

        <EditText
            android:id="@+id/edit_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/last_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name" />

        <EditText
            android:id="@+id/edit_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/password_one_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/edit_pass_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/password_two_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_pass" />

        <EditText
            android:id="@+id/edit_pass_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/gender_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender" />

        <Spinner
            android:id="@+id/gender_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/birthday_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender" />

        <DatePicker
            android:id="@+id/date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right" 
            android:text="@string/register"/>

    </LinearLayout>

</ScrollView>