<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/screen_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#363636"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/top_banner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".9"
        android:background="#000000"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/top_logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/app_logo" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".1"
        android:background="#373737"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/app_bg_artwork" />

        <TableLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingBottom="0px"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="0px" >

            <TableRow>

                <TextView
                    android:id="@+id/usernameLabel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:gravity="center_vertical"
                    android:text="@string/username"
                    android:textColor="#33B5E5"
                    android:textSize="14sp"
                    android:visibility="gone" >
                </TextView>

                <EditText
                    android:id="@+id/usernameField"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:inputType="textEmailAddress"
                    android:text=""
                    android:textColor="#33B5E5"
                    android:textSize="14sp"
                    android:visibility="gone" >
                </EditText>
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/passwordLabel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:gravity="center_vertical"
                    android:text="@string/password"
                    android:textColor="#33B5E5"
                    android:textSize="14sp"
                    android:visibility="gone" >
                </TextView>

                <EditText
                    android:id="@+id/passwordField"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:inputType="textPassword"
                    android:text=""
                    android:textColor="#33B5E5"
                    android:textSize="14sp"
                    android:visibility="gone" >
                </EditText>
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/table"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="#33B5E5"
            android:visibility="gone" >
        </Button>
        
        <Button
            android:id="@+id/newAccountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginButton"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="#33B5E5"
            android:visibility="gone" >
        </Button>
        
        <LinearLayout
            android:id="@+id/banner_layout"
            android:layout_below="@id/newAccountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:weightSum="1">
            
            <ImageView
                android:id="@+id/betaBanner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".75"
                android:layout_gravity="left"
                android:src="@drawable/beta_banner" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight=".25" />
            
        </LinearLayout>
        
        <TextView
            android:id="@+id/account_create_success"
            android:layout_below="@id/banner_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_create_success"
            android:textColor="#33B5E5"
            android:visibility="gone" >
        </TextView>

        <ProgressBar
            android:id="@+id/ctrlActivityIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/banner_layout"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:indeterminateOnly="true"
            android:keepScreenOn="true"
            android:visibility="gone" />
        
        <Button
            android:id="@+id/groupSearchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:drawableLeft="@drawable/search_login_page_icon"
            android:gravity="left"
            android:text="@string/search_for_groups"
            android:textColor="#33B5E5"
            android:visibility="gone" >
        </Button>
    </RelativeLayout>

</LinearLayout>